# cosmos

./: .gitignore  CHANGELOG.md  CRITICAL_ISSUES.md  Cargo.toml  ETHOS.md  OPPORTUNITIES.md  README.md  REPOSITORY_REVIEW.md  install.ps1  install.sh
.codex/environments/: environment.toml
.cursor/: rules.md
.cursor/rules/: cosmos-rules.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  harness-shadow.yml  release-please.yml
benches/: perf_core.rs
corpus/: oss-corpus.toml
crates/cosmos-adapters/: Cargo.toml
crates/cosmos-adapters/src/: cache.rs  config.rs  git_ops.rs  github.rs  keyring.rs  lib.rs  onboarding.rs  update.rs  util.rs
crates/cosmos-app/: Cargo.toml
crates/cosmos-app/src/: main.rs
crates/cosmos-core/: Cargo.toml
crates/cosmos-core/src/: context.rs  lib.rs  protocol.rs
crates/cosmos-core/src/grouping/: features.rs  heuristics.rs
crates/cosmos-core/src/index/: mod.rs  parser.rs
crates/cosmos-core/src/suggest/: mod.rs
crates/cosmos-engine/: Cargo.toml
crates/cosmos-engine/src/: lib.rs
crates/cosmos-engine/src/lab/: mod.rs  sandbox.rs
crates/cosmos-engine/src/llm/: agentic.rs  analysis.rs  client.rs  fix.rs  grouping.rs  implementation.rs  mod.rs  models.rs  parse.rs  prompt_utils.rs  prompts.rs  review.rs  summaries.rs  tools.rs
crates/cosmos-engine/src/llm/analysis/: context_limits.rs  mod.rs  summary_normalization.rs  tests.rs
crates/cosmos-engine/src/llm/implementation/: defaults.rs  mod.rs  quick_checks.rs  review_helpers.rs  tests.rs
crates/cosmos-ui/: Cargo.toml
crates/cosmos-ui/src/: cache.rs  config.rs  context.rs  git_ops.rs  index.rs  lib.rs  update.rs  util.rs
crates/cosmos-ui/src/app/: background.rs  input.rs  messages.rs  mod.rs  runtime.rs
crates/cosmos-ui/src/app/input/: normal.rs  overlay.rs  question.rs
crates/cosmos-ui/src/app/input/normal/: mod.rs  refresh.rs  tests.rs
crates/cosmos-ui/src/suggest/: llm.rs  mod.rs
crates/cosmos-ui/src/ui/: helpers.rs  markdown.rs  mod.rs  theme.rs  tree.rs  types.rs
crates/cosmos-ui/src/ui/render/: footer.rs  main.rs  mod.rs  overlays.rs
docs/: elite-targets.md  reliability-loop.md  self-iteration.md  suggestions-observability.md
scripts/perf/: baseline.env  gate.sh
src/: ai.rs  config.rs  diff.rs  git_ops.rs  github.rs  history.rs  history_schema.sql  keyring.rs  lib.rs  license.rs  main.rs  mascot.rs  mood.rs  onboarding.rs  prompt.rs  safe_apply.rs  score.rs  spinner.rs  testing.rs  update.rs  util.rs  workflow.rs
src/analysis/: authors.rs  complexity.rs  git.rs  mod.rs  scanner.rs  staleness.rs  tests.rs
src/app/: background.rs  bootstrap.rs  input.rs  messages.rs  mod.rs  runtime.rs
src/app/input/: normal.rs  overlay.rs  question.rs  search.rs
src/cache/: mod.rs
src/context/: mod.rs
src/grouping/: features.rs  heuristics.rs  mod.rs
src/index/: mod.rs  parser.rs
src/lab/: corpus.rs  mod.rs  reliability.rs  runner.rs  sandbox.rs
src/suggest/: llm.rs  mod.rs  static_rules.rs
src/suggest/llm/: agentic.rs  analysis.rs  client.rs  fix.rs  grouping.rs  implementation.rs  mod.rs  models.rs  parse.rs  prompt_utils.rs  prompts.rs  review.rs  summaries.rs  tools.rs
src/ui/: helpers.rs  markdown.rs  mod.rs  panels.rs  theme.rs  tree.rs  types.rs
src/ui/render/: footer.rs  header.rs  main.rs  mod.rs  overlays.rs  toast.rs
