[workspace]
members = [
  "crates/cosmos-app",
  "crates/cosmos-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/cameronspears/cosmos"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
git2 = { version = "0.19", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
unicode-width = "0.2"
tempfile = "3"
