[package]
name = "cosmos-adapters"
version = "0.7.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
tokio.workspace = true
git2.workspace = true
dirs.workspace = true
fs2.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
cosmos-core = { path = "../cosmos-core" }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native"] }

[dev-dependencies]
tempfile.workspace = true
