[package]
name = "cosmos-tui"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cosmos"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
cosmos-adapters = { path = "../cosmos-adapters" }
cosmos-core = { path = "../cosmos-core" }
cosmos-ui = { path = "../cosmos-ui" }
