[package]
name = "cosmos-engine"
version = "0.7.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
regex.workspace = true
uuid.workspace = true
git2.workspace = true
rayon.workspace = true
url.workspace = true
walkdir.workspace = true
cosmos-core = { path = "../cosmos-core" }
cosmos-adapters = { path = "../cosmos-adapters" }

[dev-dependencies]
tempfile.workspace = true
