[package]
name = "cosmos-ui"
version = "0.7.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
futures.workspace = true
uuid.workspace = true
unicode-width.workspace = true
serde.workspace = true
serde_json.workspace = true
git2.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
